--- a/res/xml/bootleg_dumpster_misc.xml
+++ b/res/xml/bootleg_dumpster_misc.xml
@@ -103,6 +103,14 @@
         android:summary="@string/allow_signature_fake_summary"
         android:defaultValue="false" />
 
+        <PreferenceScreen
+            android:title="@string/hide_apps_from_recents_title"
+            android:summary="@string/hide_apps_from_recents_summary" >
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.settings"
+                android:targetClass="com.bootleggers.dumpster.external.hideapp.HAFRAppListActivity" />
+        </PreferenceScreen>
+
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="clipboard_toast_info"
         android:title="@string/show_clipboard_toast_title"
