--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -113,6 +113,12 @@
         android:summary="@string/status_bar_toggle_brightness_summary"
         android:defaultValue="false" />
 
+    <Preference
+        android:key="carrier_label"
+        android:fragment="com.bootleggers.dumpster.external.CarrierLabel"
+        android:title="@string/carrier_category"
+        android:summary="@string/carrier_label_settings_summary" />
+
      <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="double_tap_sleep_gesture"
         android:title="@string/double_tap_to_sleep_title"
