--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -52,6 +52,12 @@
             android:summary="@string/data_disabled_icon_summary"
             android:defaultValue="true"/>
 
+        <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="status_bar_notif_count"
+            android:title="@string/status_bar_notif_count_title"
+            android:summary="@string/status_bar_notif_count_summary"
+            android:defaultValue="false" />
+
       <Preference
         android:key="traffic"
         android:title="@string/traffic_title"
