--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -104,6 +104,18 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="statusbar_logo_cat"
+        android:title="@string/statusbar_logo_category">
+
+         <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+             android:key="status_bar_logo"
+             android:title="@string/bootleg_logo_title"
+             android:summary="@string/bootleg_logo_summary"
+             android:defaultValue="false"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="statusbar_misc_cat"
         android:title="@string/misc_title">
 
