--- a/res/xml/bootleg_dumpster_statusbar.xml
+++ b/res/xml/bootleg_dumpster_statusbar.xml
@@ -113,6 +113,14 @@
              android:summary="@string/bootleg_logo_summary"
              android:defaultValue="false"/>
 
+        <com.bootleggers.dumpster.preferences.SystemSettingListPreference
+            android:key="status_bar_logo_style"
+            android:entries="@array/status_bar_logo_style_entries"
+            android:entryValues="@array/status_bar_logo_style_values"
+            android:summary="%s"
+            android:dependency="status_bar_logo"
+            android:title="@string/status_bar_logo_style_title" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
