--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -764,4 +764,8 @@
     <string name="notification_headers_title">R-Style Notifications</string>
     <string name="notification_headers_summary">Whether to show R style notification headers (Requires a SystemUI restart)</string>
 
+    <!-- QS Header Data Usage -->
+    <string name="qs_datausage_title">Show data usage in qs header</string>
+    <string name="qs_datausage_subtitle">Shows data usage in quick settings header of sim used for data</string>
+
 </resources>
