--- a/res/xml/bootleg_dumpster_quicksettings.xml
+++ b/res/xml/bootleg_dumpster_quicksettings.xml
@@ -60,6 +60,12 @@
         android:defaultValue="true" />
 
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+        android:key="qs_datausage"
+        android:title="@string/qs_datausage_title" 
+        android:summary="@string/qs_datausage_subtitle"
+        android:defaultValue="false" />
+
+    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="qs_blur"
         android:title="@string/blur_quicksettings_title"
         android:summary="@string/blur_quicksettings_summary"
