OxygenOS styled dismiss all button [2/2]
Change-Id: I5b8bb775ab9d1393f846308182b5306be74a5e00
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Signed-off-by: DennySPb <dennyspb@gmail.com>

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -872,4 +872,9 @@
     <string name="qs_header_lightgrey">Light Grey</string>
     <string name="qs_header_accent">Accent Based</string>
     <string name="qs_header_transparent">Transparent</string>
+
+    <!-- OOS clear all button -->
+    <string name="enable_clear_all_button">Replace clear all text with nice button</string>
+    <string name="enable_clear_all_button_summary">Show clear all notifications button in quick settings instead of default text one</string>
+
 </resources>
