--- a/res/xml/bootleg_dumpster_notifications.xml
+++ b/res/xml/bootleg_dumpster_notifications.xml
@@ -71,6 +71,12 @@
             android:summary="@string/notification_guts_kill_app_button_summary"
             android:defaultValue="false" />
 
+        <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+            android:key="dismiss_all_button"
+            android:title="@string/enable_clear_all_button"
+            android:summary="@string/enable_clear_all_button_summary"
+            android:defaultValue="false" />
+
      </PreferenceCategory>
 
 </PreferenceScreen>
