--- a/res/xml/bootleg_dumpster_quicksettings.xml
+++ b/res/xml/bootleg_dumpster_quicksettings.xml
@@ -59,11 +59,12 @@
         android:summary="@string/qs_running_services_summary"
         android:defaultValue="true" />
 
-    <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
+    <com.bootleggers.dumpster.preferences.SystemSettingListPreference
         android:key="qs_datausage"
         android:title="@string/qs_datausage_title" 
-        android:summary="@string/qs_datausage_subtitle"
-        android:defaultValue="false" />
+        android:entries="@array/qs_datausage_entries" 
+        android:entryValues="@array/qs_datausage_values"
+        android:defaultValue="0" />
 
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="qs_blur"
