--- a/res/xml/bootleg_dumpster_navigation.xml
+++ b/res/xml/bootleg_dumpster_navigation.xml
@@ -23,6 +23,12 @@
         android:title="@string/cat_general_ui">
 
     <Preference
+        android:key="pulse"
+        android:title="@string/pulse_settings"
+        android:summary="@string/pulse_settings_summary"
+        android:fragment="com.bootleggers.dumpster.external.PulseSettings" />
+
+    <Preference
             android:title="@string/navbar_tuner_title" >
             <intent android:action="android.intent.action.MAIN"
                 android:targetPackage="com.android.systemui"
