ColorPickerPreference: Add attrs to show/hide reset and preview icons
Change-Id: I74fe69f8facdd28a783b362f801c3e1fbdae7d29
Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>

--- a/res/values/bootleg_attrs.xml
+++ b/res/values/bootleg_attrs.xml
@@ -27,6 +27,8 @@
         <attr name="defaultColorValue" format="integer" />
         <attr name="ledPreview" format="boolean" />
         <attr name="alphaSlider" format="boolean" />
+        <attr name="showPreview" format="boolean" />
+        <attr name="showReset" format="boolean" />
     </declare-styleable>
 	
     <declare-styleable name="SeekBarPreference">
