Dumpster: Add Long press back to kill app (1/2)
Change-Id: Ia225473ee07d90a9a0480c443e3b8a2f45a37eff

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -745,4 +745,7 @@
     <string name="tuner_keyguard_show_battery_bar_always_title">Always show battery bar</string>
     <string name="tuner_keyguard_show_battery_bar_always_summary">Always show battery bar on charging</string>
 
+    <string name="kill_app_longpress_back">Kill app back button</string>
+    <string name="kill_app_longpress_back_summary">Kill the foreground app by long-pressing the back button</string>
+
 </resources>
