dumpster: iOS-like toast notification for clipboard access
Bootleggers (@eldainosor) edit: Let's make it toggleable becuase it's safe but it might get annoying.

Change-Id: Ied3cc11e93afd348e2ebe0410bde50cfc5fdbf37

--- a/res/values/bootleg_strings.xml
+++ b/res/values/bootleg_strings.xml
@@ -769,4 +769,7 @@
     <string name="qs_show_battery_estimate_title">Battery estimates</string>
     <string name="qs_show_battery_estimate_summary">Show estimated remaining battery life in expanded status bar</string>
 
+    <!-- Enable clipboard toast -->
+    <string name="show_clipboard_toast_title">Show toast on clipboard access</string>
+    <string name="show_clipboard_toast_summary">When an app is trying to access the clipboard, show an informative toast about it</string>
 </resources>
