--- a/res/xml/bootleg_dumpster_quicksettings.xml
+++ b/res/xml/bootleg_dumpster_quicksettings.xml
@@ -47,6 +47,13 @@
         android:dependency="qs_show_brightness"
         android:defaultValue="false"/>
 
+    <com.bootleggers.dumpster.preferences.SecureSettingSwitchPreference
+        android:key="qs_show_brightness_side_buttons"
+        android:title="@string/brightness_side_buttons_title"
+        android:summary="@string/brightness_side_buttons_summary"
+        android:defaultValue="false"
+        android:dependency="qs_show_brightness"/>
+
     <com.bootleggers.support.preferences.SystemSettingListPreference
          android:key="qs_tile_style"
          android:title="@string/qs_tile_style_title"
