--- a/res/xml/bootleg_dumpster_quicksettings.xml
+++ b/res/xml/bootleg_dumpster_quicksettings.xml
@@ -82,6 +82,15 @@
         android:entryValues="@array/qs_datausage_values"
         android:defaultValue="0" />
 
+    <com.bootleggers.support.preferences.SystemSettingListPreference
+         android:key="qs_header_style"
+         android:title="@string/qs_header_style_title"
+         android:dialogTitle="@string/qs_header_style_title"
+         android:entries="@array/qs_header_style_entries"
+         android:entryValues="@array/qs_header_style_values"
+         android:summary="%s"
+         android:defaultValue="0" />
+
     <com.bootleggers.dumpster.preferences.SystemSettingSwitchPreference
         android:key="qs_blur"
         android:title="@string/blur_quicksettings_title"
