--- a/res/xml/bootleg_dumpster_lockscreen.xml
+++ b/res/xml/bootleg_dumpster_lockscreen.xml
@@ -200,10 +200,10 @@
 
     </PreferenceCategory>
 
-   <!-- FOD customization options -->
+    <!-- FOD icon picker -->
     <PreferenceCategory
         android:key="fod_icon_picker"
-        android:title="@string/fod_icon_picker_category_title">
+        android:title="@string/fod_icon_picker_title">
 
         <Preference
             android:key="fod_icon_picker_category"
@@ -219,19 +219,10 @@
             android:defaultValue="false" />
 
         <com.bootleggers.dumpster.preferences.SystemSettingListPreference
-            android:key="fod_anim"
-            android:title="@string/fod_recog_animation_effect_title"
-            android:summary="%s"
-            android:entries="@array/fod_recog_animation_entries"
-            android:entryValues="@array/fod_recog_animation_values"
-            android:defaultValue="0"
-            android:dependency="fod_recognizing_animation" />
-
-        <com.bootleggers.dumpster.preferences.SystemSettingListPreference
             android:key="fod_pressed_state"
             android:dialogTitle="@string/fod_pressed_state_title"
             android:title="@string/fod_pressed_state_title"
-            android:summary="%s"
+            android:summary="@string/fod_pressed_state_summary"
             android:entries="@array/fod_pressed_state_entries"
             android:entryValues="@array/fod_pressed_state_values"
             android:defaultValue="0" />
